--- a/Theme/Themes/Generic.xaml
+++ b/Theme/Themes/Generic.xaml
@@ -1,6 +1,5 @@
-﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
@@ -16,6 +15,8 @@
         <ResourceDictionary Source="/Theme;component/Themes/Scrolls/ScrollViewer.xaml"/>
         <ResourceDictionary Source="/Theme;component/Themes/Ranges/Slider.xaml"/>
         <ResourceDictionary Source="/Theme;component/Themes/Ranges/ProgressBar.xaml"/>
+        <ResourceDictionary Source="/Theme;component/Themes/Selectors/ListBox.xaml"/>
+        <ResourceDictionary Source="/Theme;component/Themes/Selectors/ListBoxItem.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
 </ResourceDictionary>
