--- a/Theme/Themes/TextBoxes/PasswordBox.xaml
+++ b/Theme/Themes/TextBoxes/PasswordBox.xaml
@@ -3,10 +3,10 @@
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
-        <ResourceDictionary Source="/Theme;component/Themes/TextBoxes/Control.xaml"/>
+        <ResourceDictionary Source="/Theme;component/Themes/TextBoxes/TextBoxesBase.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type PasswordBox}" BasedOn="{StaticResource BoxesBaseStyle}">
+    <Style TargetType="{x:Type PasswordBox}" BasedOn="{StaticResource TextBoxesBaseStyle}">
         
         <Setter Property="PasswordChar" Value="●"/>
 
@@ -16,7 +16,6 @@
         <Style.Triggers>
             <Trigger Property="IsKeyboardFocusWithin" Value="True">
                 <Setter Property="BorderBrush" Value="{StaticResource Accent}"/>
-                <Setter Property="BorderThickness" Value="{StaticResource BoldThickness}"/>
                 <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
             </Trigger>
         </Style.Triggers>
