--- a/Theme/Themes/Buttons/CheckBox.xaml
+++ b/Theme/Themes/Buttons/CheckBox.xaml
@@ -1,13 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:System="clr-namespace:System;assembly=mscorlib">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
-
-    <System:Double x:Key="BulletSize">10</System:Double>
-    <System:Double x:Key="BulletBorderSize">14</System:Double>
     
     <Style TargetType="{x:Type CheckBox}">
         
@@ -41,43 +37,50 @@
                                          TextBlock.FontWeight="{TemplateBinding FontWeight}"
                                          FlowDirection="{TemplateBinding FlowDirection}">
                             <BulletDecorator.Bullet>
-                                <Grid Background="{StaticResource Transparent}"
-                                      Width="{StaticResource BulletBorderSize}" Height="{StaticResource BulletBorderSize}">
-                                    <Border Background="{TemplateBinding Background}"
-                                            BorderBrush="{TemplateBinding BorderBrush}"
-                                            BorderThickness="{TemplateBinding BorderThickness}"/>
-                                    <Path x:Name="CheckBullet"
-                                          Fill="{StaticResource Transparent}"
-                                          Stroke="{StaticResource ForegroundLowlight}"
-                                          StrokeThickness="{StaticResource BoldThicknessValue}"
-                                          Visibility="Collapsed"
-                                          HorizontalAlignment="Center" VerticalAlignment="Center"
-                                          Width="{StaticResource BulletSize}" Height="{StaticResource BulletSize}">
-                                        <Path.Data>
-                                            <GeometryGroup>
-                                                <LineGeometry StartPoint="1,4" EndPoint="5,9"/>
-                                                <LineGeometry StartPoint="5,9" EndPoint="9,1"/>
-                                            </GeometryGroup>
-                                        </Path.Data>
-                                    </Path>
-                                    <Path x:Name="IndeterminateBullet"
-                                          Fill="{StaticResource ForegroundLowlight}"
-                                          StrokeThickness="0"
-                                          Visibility="Collapsed"
-                                          HorizontalAlignment="Center" VerticalAlignment="Center"
-                                          Width="{StaticResource BulletSize}" Height="{StaticResource BulletSize}">
-                                        <Path.Data>
-                                            <GeometryGroup>
-                                                <RectangleGeometry Rect="1,1,8,8"/>
-                                            </GeometryGroup>
-                                        </Path.Data>
-                                    </Path>
-                                </Grid>
+                                <Border Background="{TemplateBinding Background}"
+                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                        BorderThickness="{TemplateBinding BorderThickness}"
+                                        Width="{StaticResource BulletBorderSize}" Height="{StaticResource BulletBorderSize}">
+                                    <Grid Background="{StaticResource Transparent}">
+                                        <Path x:Name="CheckBullet"
+                                              Fill="{StaticResource Transparent}"
+                                              Stroke="{StaticResource ForegroundLowlight}"
+                                              StrokeThickness="{StaticResource BoldThicknessValue}"
+                                              Visibility="Collapsed"
+                                              HorizontalAlignment="Center" VerticalAlignment="Center"
+                                              Width="{StaticResource CheckBoxBulletSize}" Height="{StaticResource CheckBoxBulletSize}">
+                                            <Path.Data>
+                                                <GeometryGroup>
+                                                    <LineGeometry StartPoint="1,4" EndPoint="5,9"/>
+                                                    <LineGeometry StartPoint="5,9" EndPoint="9,1"/>
+                                                </GeometryGroup>
+                                            </Path.Data>
+                                        </Path>
+                                        <Path x:Name="IndeterminateBullet"
+                                              Fill="{StaticResource ForegroundLowlight}"
+                                              StrokeThickness="0"
+                                              Visibility="Collapsed"
+                                              HorizontalAlignment="Center" VerticalAlignment="Center"
+                                              Width="{StaticResource CheckBoxBulletSize}" Height="{StaticResource CheckBoxBulletSize}">
+                                            <Path.Data>
+                                                <GeometryGroup>
+                                                    <RectangleGeometry Rect="1,1,8,8"/>
+                                                </GeometryGroup>
+                                            </Path.Data>
+                                        </Path>
+                                    </Grid>
+                                </Border>
                             </BulletDecorator.Bullet>
-                            <ContentPresenter Margin="4,0,0,0"
-                                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                            <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                               VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                              RecognizesAccessKey="True"/>
+                                              RecognizesAccessKey="True">
+                                <ContentPresenter.Margin>
+                                    <Thickness Left="{StaticResource BoldPaddingValue}"
+                                               Top="0"
+                                               Right="0"
+                                               Bottom="0"/>
+                                </ContentPresenter.Margin>
+                            </ContentPresenter>
                         </BulletDecorator>
                     </Grid>
 
