--- a/Theme/Themes/Buttons/RadioButton.xaml
+++ b/Theme/Themes/Buttons/RadioButton.xaml
@@ -1,13 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:System="clr-namespace:System;assembly=mscorlib">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
-
-    <System:Double x:Key="BulletSize">8</System:Double>
-    <System:Double x:Key="BulletBorderSize">14</System:Double>
 
     <Style TargetType="{x:Type RadioButton}">
         
@@ -51,14 +47,20 @@
                                              StrokeThickness="0"
                                              Visibility="Collapsed"
                                              HorizontalAlignment="Center" VerticalAlignment="Center"
-                                             Width="{StaticResource BulletSize}" Height="{StaticResource BulletSize}">
+                                             Width="{StaticResource RadioButtonBulletSize}" Height="{StaticResource RadioButtonBulletSize}">
                                     </Ellipse>
                                 </Grid>
                             </BulletDecorator.Bullet>
-                            <ContentPresenter Margin="4,0,0,0"
-                                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                            <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                               VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                              RecognizesAccessKey="True"/>
+                                              RecognizesAccessKey="True">
+                                <ContentPresenter.Margin>
+                                    <Thickness Left="{StaticResource BoldPaddingValue}"
+                                               Top="0"
+                                               Right="0"
+                                               Bottom="0"/>
+                                </ContentPresenter.Margin>
+                            </ContentPresenter>
                         </BulletDecorator>
                     </Grid>
 
