--- a/Theme/Themes/Generic.xaml
+++ b/Theme/Themes/Generic.xaml
@@ -17,6 +17,8 @@
         <ResourceDictionary Source="/Theme;component/Themes/Ranges/ProgressBar.xaml"/>
         <ResourceDictionary Source="/Theme;component/Themes/Selectors/ListBox.xaml"/>
         <ResourceDictionary Source="/Theme;component/Themes/Selectors/ListBoxItem.xaml"/>
+        <ResourceDictionary Source="/Theme;component/Themes/Selectors/ComboBox.xaml"/>
+        <ResourceDictionary Source="/Theme;component/Themes/Selectors/ComboBoxItem.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
 </ResourceDictionary>
