--- a/Theme/Themes/Buttons/CheckBox.xaml
+++ b/Theme/Themes/Buttons/CheckBox.xaml
@@ -46,25 +46,28 @@
                                               Fill="{StaticResource Transparent}"
                                               Stroke="{StaticResource ForegroundLowlight}"
                                               StrokeThickness="{StaticResource BoldThicknessValue}"
+											  Stretch="Fill"
                                               Visibility="Collapsed"
                                               HorizontalAlignment="Center" VerticalAlignment="Center"
                                               Width="{StaticResource CheckBoxBulletSize}" Height="{StaticResource CheckBoxBulletSize}">
                                             <Path.Data>
                                                 <GeometryGroup>
-                                                    <LineGeometry StartPoint="1,4" EndPoint="5,9"/>
-                                                    <LineGeometry StartPoint="5,9" EndPoint="9,1"/>
+                                                    <LineGeometry StartPoint="0,3" EndPoint="4,8"/>
+                                                    <LineGeometry StartPoint="4,8" EndPoint="8,0"/>
                                                 </GeometryGroup>
                                             </Path.Data>
                                         </Path>
                                         <Path x:Name="IndeterminateBullet"
                                               Fill="{StaticResource ForegroundLowlight}"
                                               StrokeThickness="0"
+											  Stretch="Fill"
                                               Visibility="Collapsed"
+											  Margin="2"
                                               HorizontalAlignment="Center" VerticalAlignment="Center"
                                               Width="{StaticResource CheckBoxBulletSize}" Height="{StaticResource CheckBoxBulletSize}">
                                             <Path.Data>
                                                 <GeometryGroup>
-                                                    <RectangleGeometry Rect="1,1,8,8"/>
+                                                    <RectangleGeometry Rect="0,0,1,1"/>
                                                 </GeometryGroup>
                                             </Path.Data>
                                         </Path>
